# iced-rs-test

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  game.tpl  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
data/: builtin.tpl  game.tpl  village.tpl
src/: main.rs
src/game_state/: mod.rs
src/game_state/actions/: mod.rs
src/game_state/character/: mod.rs
src/game_state/combat/: mod.rs
src/game_state/conditions/: mod.rs
src/game_state/currency/: mod.rs
src/game_state/event_log/: mod.rs
src/game_state/inventory/: mod.rs
src/game_state/inventory/item/: mod.rs
src/game_state/location/: mod.rs
src/game_state/player_actions/: mod.rs
src/game_state/story/: mod.rs  tests.rs
src/game_state/story/io/: mod.rs
src/game_state/story/quests/: mod.rs  tests.rs
src/game_state/story/quests/quest_conditions/: mod.rs
src/game_state/story/quests/quest_stages/: mod.rs
src/game_state/time/: mod.rs
src/game_state/triggers/: mod.rs
src/game_state/world/: mod.rs
src/game_state/world/events/: mod.rs
src/game_state/world/locations/: mod.rs
src/game_state/world/monsters/: mod.rs
src/game_template/: mod.rs
src/game_template/compiler/: mod.rs
src/game_template/game_initialisation/: mod.rs
src/game_template/parser/: mod.rs
src/game_template/parser/character_iterator/: mod.rs
src/game_template/parser/error/: mod.rs
src/game_template/parser/section/: mod.rs
src/game_template/parser/tokenizer/: mod.rs
src/io/: browser_based.rs  file_based.rs  mod.rs
src/io/pathbuf_serde/: mod.rs
src/savegames/: browser_based.rs  file_based.rs  mod.rs
src/savegames/pathbuf_serde/: mod.rs
src/text_utils/: mod.rs
src/ui/: mod.rs
src/ui/bulk_update_state/: mod.rs
src/ui/create_new_game_state/: mod.rs
src/ui/elements/: mod.rs
src/ui/load_game_state/: mod.rs
src/ui/load_game_template_state/: mod.rs
src/ui/main_menu_state/: mod.rs
src/ui/running_state/: mod.rs
src/ui/running_state/main_view/: mod.rs
src/ui/running_state/main_view/action_picker/: mod.rs
src/ui/running_state/main_view/calendar/: mod.rs
src/ui/running_state/main_view/location/: mod.rs
src/ui/running_state/main_view/overview/: mod.rs
src/ui/running_state/main_view/story/: mod.rs
src/ui/style/: mod.rs
src/utils/: mod.rs
src/utils/serde/: mod.rs
src/utils/text/: mod.rs
src/utils/ui/: mod.rs
static/: village.xcf
