[package]
name = "iced-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4.2", features = ["async-std"]}
iced_native = "0.5.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
clap = {version = "3.1.12", features = ["derive"]}
log = "0.4.16"
simplelog = "0.12.0"
async-std = "1.12"
enum-iterator = "1.1.3"
rand = "0.8.5"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.6.0"
rand_distr = "0.4.3"