[package]
name = "iced-rs-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4.2", features = ["async-std"]}
iced_native = "0.5.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
clap = {version = "3.1.12", features = ["derive"]}
log = "0.4.16"
simplelog = "0.12.0"
async-std = "1.12"
enum-iterator = "1.1.3"
rand = { version = "0.8.5" }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
lazy_static = "1.4.0"
regex = "1.6.0"
rand_distr = "0.4.3"
iced_web = "0.4.0"
getrandom = { version = "0.2.7", features = ["js"] }
wasm-logger = "0.2.0"
web-sys = {version = "0.3.57", features = ["Storage", "Window"]}
wasm-bindgen = "0.2.82"
event-trigger-action-system = { version = "0.6.3", features = ["serde"] }
unicode_reader = "1.0.2"