[package]
name = "iced-rs-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-trigger-action-system = { version = "0.7.6", features = ["serde"] }
section_parser_derive = "0.1.1"

iced = {version = "0.4.2", features = ["async-std", "image"]}
iced_native = "0.5.1"
serde = {version = "1.0.136", features = ["derive"]}
pot = "1.0.2"
base64 = "0.13.0"
clap = {version = "3.1.12", features = ["derive"]}
log = "0.4.16"
simplelog = "0.12.0"
async-std = "1.12"
enum-iterator = "1.1.3"
rand = { version = "0.8.5" }
rand_distr = "0.4.3"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
getrandom = { version = "0.2.7", features = ["js"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
lazy_static = "1.4.0"
regex = "1.6.0"
iced_web = "0.4.0"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.57", features = ["Storage", "Window", "Location"]}
wasm-bindgen = "0.2.82"
async-recursion = "1.0.0"
manifest-dir-macros = "0.1.16"
os_str_bytes = { version = "6.3.0", features = ["checked_conversions"] }
reqwest = "0.11.11"
flate2 = "1.0.24"
url = "2.3.1"